Fixed some layout issues and changed a picture in the about

--- a/src/components/sass/layout/hero-banner.scss
+++ b/src/components/sass/layout/hero-banner.scss
@@ -5,7 +5,7 @@
     background-size: cover;
     text-align: center;
     padding: 2rem;
-    margin: 8rem 0;
+    margin: 10rem 0rem 2rem 0rem;
 }
 
 .hero-banner h3 {
