--- a/src/components/sass/layout/home-vision.scss
+++ b/src/components/sass/layout/home-vision.scss
@@ -1,5 +1,5 @@
 .home-vision {
-    margin: 6rem 0rem;
+    margin: 10rem 0rem 4rem 0rem;
 }
 
 @media screen and (min-width: 600px) {
